build/build_error.log
[  6%] Automatic MOC and UIC for target VisualizadorDeGrafos
[  6%] Built target VisualizadorDeGrafos_autogen
Consolidate compiler generated dependencies of target VisualizadorDeGrafos
[ 12%] Building CXX object CMakeFiles/VisualizadorDeGrafos.dir/src/GraphView.cpp.o
/mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/src/GraphView.cpp: In member function ‘virtual void GraphView::mouseMoveEvent(QMouseEvent*)’:
/mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/src/GraphView.cpp:231:30: error: invalid use of incomplete type ‘class QScrollBar’
  231 |         horizontalScrollBar()->setValue(horizontalScrollBar()->value() - delta.x());
      |                              ^~
In file included from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qscrollarea.h:44,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qgraphicsview.h:46,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/QGraphicsView:1,
                 from /mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/include/GraphView.h:4,
                 from /mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/src/GraphView.cpp:1:
/usr/include/x86_64-linux-gnu/qt5/QtWidgets/qabstractscrollarea.h:52:7: note: forward declaration of ‘class QScrollBar’
   52 | class QScrollBar;
      |       ^~~~~~~~~~
/mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/src/GraphView.cpp:231:62: error: invalid use of incomplete type ‘class QScrollBar’
  231 |         horizontalScrollBar()->setValue(horizontalScrollBar()->value() - delta.x());
      |                                                              ^~
In file included from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qscrollarea.h:44,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qgraphicsview.h:46,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/QGraphicsView:1,
                 from /mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/include/GraphView.h:4,
                 from /mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/src/GraphView.cpp:1:
/usr/include/x86_64-linux-gnu/qt5/QtWidgets/qabstractscrollarea.h:52:7: note: forward declaration of ‘class QScrollBar’
   52 | class QScrollBar;
      |       ^~~~~~~~~~
/mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/src/GraphView.cpp:232:28: error: invalid use of incomplete type ‘class QScrollBar’
  232 |         verticalScrollBar()->setValue(verticalScrollBar()->value() - delta.y());
      |                            ^~
In file included from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qscrollarea.h:44,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qgraphicsview.h:46,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/QGraphicsView:1,
                 from /mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/include/GraphView.h:4,
                 from /mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/src/GraphView.cpp:1:
/usr/include/x86_64-linux-gnu/qt5/QtWidgets/qabstractscrollarea.h:52:7: note: forward declaration of ‘class QScrollBar’
   52 | class QScrollBar;
      |       ^~~~~~~~~~
/mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/src/GraphView.cpp:232:58: error: invalid use of incomplete type ‘class QScrollBar’
  232 |         verticalScrollBar()->setValue(verticalScrollBar()->value() - delta.y());
      |                                                          ^~
In file included from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qscrollarea.h:44,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qgraphicsview.h:46,
                 from /usr/include/x86_64-linux-gnu/qt5/QtWidgets/QGraphicsView:1,
                 from /mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/include/GraphView.h:4,
                 from /mnt/c/Users/geova/Github Desktop Repos/VisualizadorDeGrafos-GUI-App/src/GraphView.cpp:1:
/usr/include/x86_64-linux-gnu/qt5/QtWidgets/qabstractscrollarea.h:52:7: note: forward declaration of ‘class QScrollBar’
   52 | class QScrollBar;
      |       ^~~~~~~~~~
make[2]: *** [CMakeFiles/VisualizadorDeGrafos.dir/build.make:132: CMakeFiles/VisualizadorDeGrafos.dir/src/GraphView.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/VisualizadorDeGrafos.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
